(fix): fix skills formatting on mobile

--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -559,6 +559,10 @@ nav > a.mobile-btn {
 	font-style: italic;
 }
 
+.skills {
+	margin-left: 2em;
+}
+
 .skills ul {
 	list-style: disc outside;
 }
